[gd_scene load_steps=2 format=3 uid="uid://3a3uqobboeyl"]

[ext_resource type="Script" path="res://Scenes/Scripts/hud_screen.gd" id="1_5o8i2"]

[node name="HudScreen" type="CanvasLayer"]
script = ExtResource("1_5o8i2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="EnemiesLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Enemies Remaining: ????"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HealthLabel" type="RichTextLabel" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Health Remaining: ????"
